REfactor code